force-app/main/default/objects/ssot__GiftCommitment__dlm/fields/ssot__DonorId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DonorId__c</fullName>
    <label>Donor</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DonorId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>