force-app/main/default/objects/ssot__GiftCommitment__dlm/fields/ssot__EffectiveInterval__c.field-meta.xml
<CustomField>
    <fullName>ssot__EffectiveInterval__c</fullName>
    <label>Effective Interval</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EffectiveInterval</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>