force-app/main/default/objects/ssot__GiftCommitment__dlm/fields/ssot__EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__EffectiveStartDate__c</fullName>
    <label>Effective Start Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EffectiveStartDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>