force-app/main/default/objects/ssot__GiftCommitment__dlm/fields/ssot__ExpectedEndDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExpectedEndDate__c</fullName>
    <label>Expected End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExpectedEndDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>