force-app/main/default/objects/ssot__GiftCommitment__dlm/fields/ssot__GiftVehicleType__c.field-meta.xml
<CustomField>
    <fullName>ssot__GiftVehicleType__c</fullName>
    <label>Gift Vehicle Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GiftVehicleType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>