force-app/main/default/objects/ssot__GiftCommitment__dlm/fields/ssot__LastPaidTransactionDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastPaidTransactionDate__c</fullName>
    <label>Last Paid Transaction Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastPaidTransactionDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>