force-app/main/default/objects/ssot__GiftCommitment__dlm/fields/ssot__NextTransactionAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__NextTransactionAmount__c</fullName>
    <label>Next Transaction Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NextTransactionAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>