force-app/main/default/objects/ssot__GiftCommitment__dlm/fields/ssot__rel_1697761238693_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761238693_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GiftCommitment_OpportunityId_map_Opp_rel</label>
    <referenceTo>ssot__Opportunity__dlm</referenceTo>
    <relationshipLabel>GiftCommitment_OpportunityId_map_Opp_rel</relationshipLabel>
    <relationshipName>rel_1697761238693_end</relationshipName>
    <type>Lookup</type>
</CustomField>