force-app/main/default/objects/ssot__GiftCommitment__dlm/fields/ssot__TotalPaidTransactionAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalPaidTransactionAmount__c</fullName>
    <label>Total Paid Transaction Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalPaidTransactionAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>