force-app/main/default/objects/ssot__GiftCommitment__dlm/fields/ssot__TotExpcAssetTransferValAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotExpcAssetTransferValAmount__c</fullName>
    <label>Tot Expc Asset Transfer Value Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotExpcAssetTransferValAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>