force-app/main/default/objects/ssot__GiftCommitment__dlm/fields/ssot__TransactionPaymentCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TransactionPaymentCount__c</fullName>
    <label>Transaction Payment Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TransactionPaymentCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>